# windy-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yml  publish.yml  release.yml
client/: __init__.py  client.py  enums.py  exceptions.py
client/models/: __init__.py  request.py  response.py
server/: server.py
