[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windy-mcp-server"
version = "0.2.2"
description = "Unofficial MCP server for the Windy Point Forecast API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Martin Eichinger", email = "dasteini@googlemail.com" }]
license = { file = "LICENSE" }
keywords = ["mcp", "weather", "windy", "forecast", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
windy-mcp-server = "server.server:main"

[project.urls]
Homepage = "https://github.com/coffeeandcloud/windy-mcp-server"
Repository = "https://github.com/coffeeandcloud/windy-mcp-server"

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["client", "server"]

[tool.commitizen]
name = "cz_customize"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.commitizen.customize]
message_template = "{{prefix}}: {{message}}"
schema_pattern = "(feat|fix|docs|style|refactor|test|chore|build|ci|perf|revert)(\\(.+\\))?!?: .+"

[[tool.commitizen.customize.questions]]
type = "list"
name = "prefix"
message = "Type of change:"
choices = [
  {value = "feat",     name = "feat:     a new feature"},
  {value = "fix",      name = "fix:      a bug fix"},
  {value = "docs",     name = "docs:     documentation changes"},
  {value = "refactor", name = "refactor: code restructure without feature or fix"},
  {value = "test",     name = "test:     add or update tests"},
  {value = "chore",    name = "chore:    maintenance (deps, tooling, etc.)"},
  {value = "ci",       name = "ci:       CI/CD changes"},
  {value = "perf",     name = "perf:     performance improvement"},
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Short summary (lower case, no period):"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["server"]
